--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,31 +75,6 @@
   margin-right: auto;
 }
 
-.marquee {
-  width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  box-sizing: border-box;
-}
-
-.marquee::after {
-  content: '';
-  display: inline-block;
-  padding-left: 100%;
-  animation: marquee 10s linear infinite;
-}
-
-.marquee span {
-  display: inline-block;
-  padding-right: 100%;
-}
-
-@keyframes marquee {
-  0% {
-    transform: translateX(0%);
-  }
-
-  100% {
-    transform: translateX(-100%);
-  }
+body {
+  overflow-x: hidden;
 }
